# rlm-code

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AI-GENERATED-CODE-POLICY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  NOTICE  PRD.md  README.md  SECURITY.md  SUPPORT.md  add_numbers.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  rlm-he.py  sitemap.xml
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  pre-commit.yml  release.yml
adk_rlm/: __init__.py  agent.py  cli.py  code_executor.py  events.py  llm.py  main.py  prompts.py  types.py  usage.py  web.py
adk_rlm/agents/: __init__.py  rlm_agent.py
adk_rlm/callbacks/: __init__.py  code_execution.py
adk_rlm/files/: __init__.py  base.py  lazy.py  loader.py
adk_rlm/logging/: __init__.py  rlm_logger.py  verbose.py
adk_rlm/repl/: __init__.py  local_repl.py  safe_builtins.py
adk_rlm/templates/: index.html
adk_rlm/tools/: __init__.py
benchmarks/: index.html
benchmarks/codemode-evaluation/: index.html
benchmarks/leaderboard/: index.html
benchmarks/presets/: index.html
benchmarks/session-replay/: index.html
codemode/: index.html
codemode/architecture/: index.html
codemode/cloudflare/: index.html
codemode/evaluation/: index.html
codemode/guardrails/: index.html
codemode/quickstart/: index.html
codemode/utcp/: index.html
core/: index.html
core/comparison/: index.html
core/environments/: index.html
core/events/: index.html
core/execution-patterns/: index.html
core/memory-compaction/: index.html
core/repl-types/: index.html
core/runner/: index.html
core/termination/: index.html
core/trace-analysis/: index.html
core/trajectory/: index.html
docs/: index.md
docs/about/: changelog.md  contributing.md  index.md  license.md  why-rlm-code.md
docs/advanced/: cicd.md  custom-modules.md  deployment.md  mcp-integration.md
docs/benchmarks/: codemode-evaluation.md  index.md  leaderboard.md  presets.md  session-replay.md
docs/codemode/: architecture.md  cloudflare.md  evaluation.md  guardrails.md  index.md  quickstart.md  utcp.md
docs/contributing/: getting-started.md
docs/core/: comparison.md  environments.md  events.md  execution-patterns.md  index.md  memory-compaction.md  repl-types.md  runner.md  termination.md  trace-analysis.md  trajectory.md
docs/getting-started/: cli.md  codemode-quickstart.md  configuration.md  first-program.md  index.md  installation.md  quick-start.md  quickstart.md  researcher-onboarding.md  start-here.md  understanding.md
docs/guide/: adapters.md  async-streaming.md  creating-gold-data.md  evaluation.md  generating-code.md  interactive-mode.md  mcp-overview.md  model-connection.md  natural-language-commands.md  optimization.md  project-management.md  retrievers.md  running-programs.md  slash-commands.md  validation.md
docs/integrations/: codemode.md  frameworks.md  index.md  llm-providers.md  mcp.md
docs/observability/: index.md  langfuse.md  langsmith.md  logfire.md  mlflow.md  otel.md  sinks.md
docs/policies/: action-selection.md  compaction.md  index.md  registry.md  reward.md  termination.md
docs/reference/: architecture.md  commands.md  configuration.md  faq.md  index.md  security.md  templates.md  troubleshooting.md
docs/sandbox/: cloud.md  docker.md  index.md  local.md  monty.md
docs/security/: approval-gates.md  audit.md  codemode-guardrails.md  index.md  risk-assessment.md
docs/stylesheets/: extra.css
docs/tui/: index.md  research.md  standard.md  tabs.md  theme.md  widgets.md
docs/tutorials/: examples.md  gepa-optimization.md  mcp-filesystem-assistant.md  mcp-github-triage.md  question-answering.md  rag-system.md  sentiment-analyzer.md
eval/packs/: README.md  rlm_x_claims_matrix.yaml  superoptix_qa_pairs.json
examples/: complete_workflow_example.py  email_classifier_demo.py  mcp_config_examples.yaml  mcp_filesystem_assistant.py  mcp_github_triage_assistant.py  sample_data.jsonl
examples/aie_world_fair_2026/: README.md  __init__.py  prompts.md  rlm_probe.py  use-cases.md
examples/july_harness_generalization/: README.md  __init__.py  demo.py
getting-started/: index.html
getting-started/cli/: index.html
getting-started/codemode-quickstart/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/researcher-onboarding/: index.html
getting-started/start-here/: index.html
hebrew/: prompts.py  welcome.py
integrations/: index.html
integrations/codemode/: index.html
mlruns/0/: meta.yaml
observability/: index.html
policies/: index.html
reference/: index.html
rlm__code/: __init__.py  __main__.py  main.py  py.typed
rlm_code/: __init__.py  __main__.py  main.py
sandbox/: index.html
scripts/: rlm_bench_gate.py
search/: search_index.json
security/: index.html
stylesheets/: extra.css
tests/: __init__.py  conftest.py  test_anti_patterns.py  test_auto_fixer.py  test_cache.py  test_execution_engine.py  test_export_import.py  test_harness_registry.py  test_harness_runner.py  test_init_command.py  test_integration.py  test_learning_integration.py  test_mcp_utils.py  test_module_validator.py  test_optimization_workflow.py  test_persistent_shell.py  test_predictor_validator.py  test_project_scanner.py  test_prompt_widget.py  test_property_validators.py  test_provider_discovery.py  test_provider_registry.py  test_quality_scorer.py  test_report_generator.py  test_retry.py  test_rlm_config.py  test_rlm_dspy_environment.py  test_rlm_observability.py  test_rlm_runner.py  test_sandbox_runtimes.py  test_security_validator.py  test_session_management.py  test_signature_validator.py  test_slash_harness_command.py  test_slash_rlm_command.py  test_slash_sandbox_command.py  test_streaming.py  test_superbox.py  test_trace_analysis.py  test_tui_utils.py  (+1 more)
tui/: index.html
(+293 files in other folders)
