[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rlm-code"
version = "0.1.5"
description = "RLM Code: Research Playground & Evaluation OS for Recursive Language Model Agentic Systems"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Shashi Jagtap", email = "shashi@super-agentic.ai"}
]
maintainers = [
    {name = "Shashi Jagtap", email = "shashi@super-agentic.ai"}
]
keywords = ["dspy", "code", "ai", "nlp", "language-models", "interactive", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.11"
dependencies = [
    "click",
    "dspy",
    "rich",
    "requests",
    "pyyaml",
    "mcp",
    "anyio",
    "httpx",
    "httpx-sse",
    "pydantic",
    "jsonschema",
    "packaging",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-xdist",
    "hypothesis",
    "ruff",
    "mypy",
    "pre-commit",
    "types-requests",
    "types-pyyaml",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-minify-plugin",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-xdist",
    "hypothesis",
]
mcp-ws = [
    "websockets",
]
openai = [
    "openai",
]
anthropic = [
    "anthropic",
]
gemini = [
    "google-genai",
]
tui = [
    "textual",
]
llm-all = [
    "openai",
    "anthropic",
    "google-genai",
]
mlflow = [
    "mlflow",
]
pydantic = [
    "pydantic-ai",
]
adk = [
    "google-adk",
    "google-genai",
    "python-dotenv",
]
deepagents = [
    "deepagents",
]
frameworks = [
    "pydantic-ai",
    "google-adk",
    "google-genai",
    "python-dotenv",
    "deepagents",
]

[project.urls]
Homepage = "https://github.com/SuperagenticAI/rlm-code"
Documentation = "https://superagenticai.github.io/rlm-code/"
Repository = "https://github.com/SuperagenticAI/rlm-code"
"Bug Tracker" = "https://github.com/SuperagenticAI/rlm-code/issues"
Changelog = "https://github.com/SuperagenticAI/rlm-code/blob/main/CHANGELOG.md"

[project.scripts]
rlm-code = "rlm_code.main:main"

[tool.hatch.build.targets.wheel]
packages = ["rlm_code", "adk_rlm"]
exclude = [
    "docs/",
    "mkdocs.yml",
]

# Include py.typed marker for PEP 561 compliance
[tool.hatch.build.targets.wheel.force-include]
"rlm_code/py.typed" = "rlm_code/py.typed"

[tool.hatch.build.targets.sdist]
include = [
    "rlm_code/",
    "adk_rlm/",
    "tests/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
exclude = [
    "docs/",
    "mkdocs.yml",
]

# uv configuration
[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-xdist",
    "hypothesis",
    "ruff",
    "mypy",
    "pre-commit",
    "types-requests",
    "types-pyyaml",
]

# Ruff configuration - Modern, fast linter and formatter
[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["adk_rlm"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes (undefined names, unused imports)
    "I",      # isort (import sorting)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top
    "E712",   # true/false comparison
    "E722",   # bare except
    "E741",   # ambiguous variable name
    "F841",   # unused variable (beta - will fix later)
    "F821",   # undefined name (beta - will fix later)
    "F811",   # redefinition of unused (beta - will fix later)
    "F601",   # dictionary key repeated (beta - will fix later)
    "F402",   # import shadowed by loop var (beta - will fix later)
    "F823",   # undefined local (beta - will fix later)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "S101", "PLR2004"]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["rlm_code"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
strict_equality = true
# Strict mode settings - enable gradually
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# disallow_untyped_decorators = true
# warn_unused_ignores = true
# warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "dspy.*",
    "anthropic.*",
    "openai.*",
    "google.generativeai.*",
    "google.genai.*",
    "mcp.*",
    "deepagents.*",
    "langchain.*",
    "langchain_core.*",
    "langchain_anthropic.*",
    "langchain_google_genai.*",
]
ignore_missing_imports = true

# Strict typing for core modules we've improved
[[tool.mypy.overrides]]
module = [
    "rlm_code.core.config",
    "rlm_code.core.debug_logger",
    "rlm_code.mcp.utils",
    "rlm_code.mcp.retry",
    "rlm_code.models.cache",
    "rlm_code.models.streaming",
    "rlm_code.validation.security",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["rlm_code"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
